change button to div and fix alignment

--- a/src/styles/Box.scss
+++ b/src/styles/Box.scss
@@ -1,4 +1,5 @@
 .box {
-  background: none;
-  border: 0;
+  margin: 10px;
+  display: flex;
+  align-items: end;
 }
